fira mono bold font on loads aot instead of jit - avoid flickering on first time user hovers the address label - solves Address label flickering #95

--- a/public/fonts/fonts.css
+++ b/public/fonts/fonts.css
@@ -31,6 +31,6 @@
 @font-face {
     font-family: 'Fira Mono';
     font-style: normal;
-    font-weight: 500;
+    font-weight: 500, 700;
     src: local('Fira Mono'), url('FiraMono-Medium.woff') format('woff');
 }
